added IO and Solver modules and added new rules in Makefile

--- a/solutions/Makefile
+++ b/solutions/Makefile
@@ -1,9 +1,11 @@
 FC = gfortran
 
-fd1d_heat_explicit: fd1d_heat_explicit.o RHS_mod.o CFL_mod.o
+LIBS = Types_mod.o RHS_mod.o CFL_mod.o IO_mod.o Solver_mod.o
+
+fd1d_heat_explicit: fd1d_heat_explicit.o $(LIBS)
 	$(FC) $^ -o $@
 
-fd1d_heat_explicit.o: fd1d_heat_explicit.f90 Types_mod.o RHS_mod.o CFL_mod.o
+fd1d_heat_explicit.o: fd1d_heat_explicit.f90 $(LIBS)
 	$(FC) -c -I. $<
 
 Types_mod.o: Types_mod.f90
@@ -13,6 +15,12 @@ RHS_mod.o: RHS_mod.f90 Types_mod.o
 	$(FC) -c -I. $<
 
 CFL_mod.o: CFL_mod.f90 Types_mod.o
+	$(FC) -c -I. $<
+
+IO_mod.o: IO_mod.f90 Types_mod.o
+	$(FC) -c -I. $<
+
+Solver_mod.o: Solver_mod.f90 Types_mod.o
 	$(FC) -c -I. $<
 
 diff: fd1d_heat_explicit
