added .exe extension to binary so git can ignore it

--- a/solutions/Makefile
+++ b/solutions/Makefile
@@ -2,7 +2,7 @@ FC = gfortran
 
 LIBS = Types_mod.o RHS_mod.o CFL_mod.o IO_mod.o Solver_mod.o
 
-fd1d_heat_explicit: fd1d_heat_explicit.o $(LIBS)
+fd1d_heat_explicit.exe: fd1d_heat_explicit.o $(LIBS)
 	$(FC) $^ -o $@
 
 fd1d_heat_explicit.o: fd1d_heat_explicit.f90 $(LIBS)
@@ -23,8 +23,8 @@ IO_mod.o: IO_mod.f90 Types_mod.o
 Solver_mod.o: Solver_mod.f90 Types_mod.o
 	$(FC) -c -I. $<
 
-diff: fd1d_heat_explicit
-	./fd1d_heat_explicit
+diff: fd1d_heat_explicit.exe
+	./fd1d_heat_explicit.exe
 	diff h_test01.txt h_test01.txt_bak
 	if [ $$? -eq 0 ]; then echo "fine"; else echo "not fine"; fi
 
