Adapted FFLAGS for Ubuntu 14.04 (Trusty)

--- a/solutions/Makefile
+++ b/solutions/Makefile
@@ -2,7 +2,8 @@ FC = gfortran
 
 LDFLAGS = -L. -L/usr/lib64 -lnetcdff -lnetcdf -lplplotf95cd -lplplotf95d
 LIBS = Types_mod.o RHS_mod.o CFL_mod.o IO_mod.o Solver_mod.o
-FFLAGS = -I. -I/usr/lib64/gfortran/modules
+#FFLAGS = -I. -I/usr/lib64/gfortran/modules
+FFLAGS = -I. -I/usr/include -I/usr/lib/fortran/modules/plplot
 
 fd1d_heat_explicit.exe: fd1d_heat_explicit.o $(LIBS)
 	$(FC) $^ $(LDFLAGS) -o $@
