--- a/.gitignore
+++ b/.gitignore
@@ -45,13 +45,13 @@ test*.F90
 *.blg
 *.ps
 *.pdf
+*.bak
 !fortran_usage/*pdf
 
 # netcdf files
 *.nc
 
 # gnu coverage files (gcov)
-
 *.gcda
 *.gcno
 *.f90.gcov
