--- a/solutions/src/Makefile
+++ b/solutions/src/Makefile
@@ -6,44 +6,42 @@ NETCDF_LIB = /usr/local/netcdf-4.6.1/lib
 PLPLOT_INC = /usr/local/plplot-5.13.0/lib/fortran/modules/plplot
 PLPLOT_LIB = /usr/local/plplot-5.13.0/lib
 
-LDFLAGS = -L. -lfmw -L$(PLPLOT_LIB) -L$(NETCDF_LIB) -lnetcdff -lnetcdf -lplplotfortran -lplplot 
-LIBS = Types_mod.o RHS_mod.o CFL_mod.o IO_mod.o Solver_mod.o
+LDFLAGS = -L. -lfmw -L$(PLPLOT_LIB) -L$(NETCDF_LIB) -lnetcdff -lnetcdf -lplplotfortran -lplplot
 FFLAGS = -I. -I$(PLPLOT_INC) -I$(NETCDF_INC)
+
+SOURCES := $(sort $(wildcard *_mod.f90))
+OBJECTS := $(SOURCES:.f90=.o)
 
 fd1d_heat_explicit.exe: fd1d_heat_explicit.o libfmw.a
 	$(FC) $< $(LDFLAGS) -o $@
 
-libfmw.a: $(LIBS)
+libfmw.a: $(OBJECTS)
 	ar rcs $@ $^
 
-fd1d_heat_explicit.o: fd1d_heat_explicit.f90 $(LIBS)
-	$(FC) -c $(FFLAGS) $<
+%.o %.mod: %.f90
+	nagfor -c $(FFLAGS) $<
 
-Types_mod.o: Types_mod.f90
-	$(FC) -c $(FFLAGS) $<
+DEPS := $(SOURCES:.f90=.P) fd1d_heat_explicit.P
 
-RHS_mod.o: RHS_mod.f90 Types_mod.o
-	$(FC) -c $(FFLAGS) $<
+%.P: %.f90
+	nagfor =depend -otype=make $< -o $@.tmp
+	grep -vi -E '(netcdf|plplot)' $@.tmp > $@
 
-CFL_mod.o: CFL_mod.f90 Types_mod.o
-	$(FC) -c $(FFLAGS) $<
+include Depends
 
-IO_mod.o: IO_mod.f90 Types_mod.o
-	$(FC) -c $(FFLAGS) $<
-
-Solver_mod.o: Solver_mod.f90 RHS_mod.o Types_mod.o
-	$(FC) -c $(FFLAGS) $<
+Depends: $(DEPS)
+	sort $^ | uniq -u > $@
 
 pfunit: tests.exe testSuites.inc
 	./$<
 
-tests.exe: $(PFUNIT)/include/driver.F90 CFL_mod.o testCFL.o 
+tests.exe: $(PFUNIT)/include/driver.F90 cfl_mod.o testcfl.o 
 	$(FC) -I$(PFUNIT)/mod $^ -L$(PFUNIT)/lib -lpfunit -I. -o $@
 
-testCFL.F90: testCFL.pf
+testcfl.F90: testcfl.pf
 	$(PFUNIT)/bin/pFUnitParser.py $< $@ -I.
 
-testCFL.o: testCFL.F90
+testcfl.o: testcfl.F90
 	$(FC) -I$(PFUNIT)/mod -c $<
 
 diff: fd1d_heat_explicit.exe
@@ -54,10 +52,13 @@ diff: fd1d_heat_explicit.exe
 .PHONY: clean ford ffmpeg man
 
 clean:
-	rm -rf *.mod *.o *.png *.a *.x *.exe *.mov *.mp4 test*.F90 
+	rm -rf *.mod *.o *.png *.a *.x *.exe *.mov *.mp4 test*.F90 *.P *.P.tmp
 
 ffmpeg:
 	ffmpeg -f image2 -i fd1d_heat_explicit_%*.png fd1d_heat_explicit.mp4
 
 man:
 	man ./fd1d_heat_explicit.1
+
+ford: 
+	cd ..; ford fmw.md
